--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
     </div>
     <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+            <div class="product" v-for="item in items">
+                <h4 class="product-title">{{ item.title }}</h4>
+                <button class="add-to-cart" @click="addItem">Add to cart</button>
+            </div>
+            <br>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
             <div>
-                No items in the cart.
+                Total: {{total}}
             </div>
         </div>
     </div>
@@ -34,6 +38,7 @@
 
 <!-- Scripts -->
 <script src="reload/reload.js"></script>
+<script src="node_modules/vue/dist/vue.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
