--- a/index.html
+++ b/index.html
@@ -18,27 +18,54 @@
 <div id="app">
     <div class="header">
         <h1>Vue.js Poster Store</h1>
+        <form class="searchbar" @submit.prevent="onSubmit">
+            <input type="text" name="search" id="search" placeholder="Search for posters" v-model="newSearch">
+            <input type="submit" value="Search" class="search btn">
+        </form>
     </div>
     <div class="main">
         <div class="products">
-            <div class="product" v-for="item in items">
-                <h4 class="product-title">{{ item.title }}</h4>
-                <button class="add-to-cart" @click="addItem">Add to cart</button>
+            <div v-if="loading">
+                Loading...
+            </div>
+            <div class="search-results" v-else>
+                Found {{items.length}} for search term {{lastSearch}}
+            </div>
+            <div class="product" v-for="(item, index) in items">
+                <div>
+                    <div class="product-image">
+                        <img :src="item.link">
+                    </div>
+                </div>
+                <div>
+                    <h4 class="product-title">{{ item.title }}</h4>
+                    <p>Price: <strong>{{price | currency}}</strong></p>
+                    <button class="add-to-cart btn" @click="addItem(index)">Add to cart</button>
+                </div>
             </div>
             <br>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <div>
-                Total: {{total}}
-            </div>
+            <ul>
+                <li class="cart-item"
+                    v-for="item in cart">
+                       <div class="item-title">{{item.title}}</div>
+                       <span class="item-qty">{{item.price | currency}} x {{item.qty}}</span>
+                       <button class="btn" @click="inc(item)">+</button>
+                       <button class="btn" @click="dec(item)">-</button>
+                </li>
+            </ul>
+            <div v-if="cart.length">Total: {{total | currency}}</div>
+            <div v-else class="empty-cart">No items in the cart</div>
         </div>
-    </div>
+    </div
 </div>
 
 <!-- Scripts -->
 <script src="reload/reload.js"></script>
 <script src="node_modules/vue/dist/vue.js"></script>
+<script src="node_modules/vue-resource/dist/vue-resource.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
