--- a/index.html
+++ b/index.html
@@ -47,17 +47,19 @@
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <ul>
-                <li class="cart-item"
+            <transition-group name="fade" tag="ul">
+                <li class="cart-item" :key="item.id"
                     v-for="item in cart">
-                       <div class="item-title">{{item.title}}</div>
-                       <span class="item-qty">{{item.price | currency}} x {{item.qty}}</span>
-                       <button class="btn" @click="inc(item)">+</button>
-                       <button class="btn" @click="dec(item)">-</button>
+                    <div class="item-title">{{item.title}}</div>
+                    <span class="item-qty">{{item.price | currency}} x {{item.qty}}</span>
+                    <button class="btn" @click="inc(item)">+</button>
+                    <button class="btn" @click="dec(item)">-</button>
                 </li>
-            </ul>
-            <div v-if="cart.length">Total: {{total | currency}}</div>
-            <div v-else class="empty-cart">No items in the cart</div>
+            </transition-group>
+            <transition name="fade">
+                <div v-if="cart.length">Total: {{total | currency}}</div>
+            </transition>
+            <div v-if="cart.length === 0" class="empty-cart">No items in the cart</div>
         </div>
     </div
 </div>
