--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div class="header">
         <h1>Vue.js Poster Store</h1>
         <form class="searchbar" @submit.prevent="onSubmit">
@@ -29,7 +29,7 @@
                 Loading...
             </div>
             <div class="search-results" v-else>
-                Found {{items.length}} for search term {{lastSearch}}
+                Found {{results.length}} for search term {{lastSearch}}
             </div>
             <div class="product" v-for="(item, index) in items">
                 <div>
@@ -44,6 +44,9 @@
                 </div>
             </div>
             <br>
+            <div id="product-list-bottom">
+                <div v-if="noMoreItems">No more results</div>
+            </div>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
@@ -68,6 +71,7 @@
 <script src="reload/reload.js"></script>
 <script src="node_modules/vue/dist/vue.js"></script>
 <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
